--- a/app/views/areas/_index.html.erb
+++ b/app/views/areas/_index.html.erb
@@ -7,7 +7,7 @@
   <div class="row form-group">
     <%= label_tag :whole_area, t('.whole_area'), class: 'col-md-6 control-label' %>
     <div class="col-md-6">
-      <%= link_to t('buttons.continue'), [:areas, area_code: -1], role: :button, remote: true, class: 'btn btn-default btn-block' %>
+      <%= link_to t('buttons.continue'), [:areas], role: :button, remote: true, class: 'btn btn-default btn-block' %>
     </div>
   </div>
   <div class="row form-group">
