--- a/app/views/areas/_districts_form.html.erb
+++ b/app/views/areas/_districts_form.html.erb
@@ -1,10 +1,12 @@
 <div id="districts-form" class="area-container">
+  <%= form_for(:areas, method: :get, remote: true, html: { id: 'areas-form' }) do |f| %>
   <div class="row">
     <div class="col-md-12">
       <div class="btn-group btn-group-justified">
         <%= link_to t('buttons.cancel'), [:areas, cancel: true], remote: true, class: 'btn btn-default' %>
-        <%= link_to t('buttons.resume'), 'javascript:;', remote: true, class: 'btn btn-primary' %>
+        <%= link_to t('buttons.resume'), 'javascript:;', id: 'areas-form-submit', remote: true, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
+<% end -%>
 </div>
