--- a/app/views/observations/_new.html.erb
+++ b/app/views/observations/_new.html.erb
@@ -1,4 +1,5 @@
 <div id="new-observation" class="area-container">
   <%= form_for(@observation, remote: true) do |f| %>
+    <%= params.inspect %>
   <% end -%>
 </div>
