--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -51,7 +51,9 @@ class KS.Map
             else
               feature.getStyle().getFill().setColor('rgba(255,135,0,0.5)')
               feature.getStyle().getText().getFill().setColor('#FF8700')
-          else if layer.get('id') in ['features', 'jobs']
+          else if !KS.layers.findById('observations').getVisible() &&
+          !KS.layers.findById('draw_observation').getVisible() &&
+          (layer.get('id') in ['features', 'jobs'])
             features = feature.get('features')
             url = KS.requests_path
             if features.length == 1
@@ -141,6 +143,7 @@ KS.styles =
   observationStyle: (feature) ->
     feature.setStyle new ol.style.Style
       stroke: new ol.style.Stroke
+        color: '#FF8700'
       fill: new ol.style.Fill
         color: 'rgba(255,135,0,0.5)'
       text: new ol.style.Text
@@ -185,8 +188,8 @@ KS.highlightStyle= (feature, icon) ->
         anchorXUnits: 'pixels'
         anchorYUnits: 'pixels'
         anchor: [
-          7
-          65
+          16
+          50
         ]
         src: icon
       text: KS.styles.featureAttribution(feature)
@@ -317,14 +320,15 @@ class KS.FeatureData
       features = new Array
       $.each response, (index, elem) ->
         attribution = ""
-        attribution = "" if elem.extended_attributes.photo_required
+        if KS.login_required
+          attribution = "" if elem.extended_attributes.photo_required
 
-        <% if Settings::Map.show_trust %>
-        count = 1
-        while count <= elem.extended_attributes.trust
-          attribution += ""
-          count++
-        <% end %>
+          <% if Settings::Map.show_trust %>
+          count = 1
+          while count <= elem.extended_attributes.trust
+            attribution += ""
+            count++
+          <% end %>
 
         coord = ol.proj.transform([elem.long, elem.lat], KS.projectionWGS84, KS.projection())
         f = new ol.Feature
