--- a/app/views/application/desktop/_create.html.erb
+++ b/app/views/application/desktop/_create.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row form-group">
     <div class="col-md-12">
-      <%= t(:success_message) %>
+      <%= t(:success_message) %> <%= t(:share_request) if options && options[:id] %>
     </div>
     <% if options && options[:id] -%>
       <div class="col-md-12">
