--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,13 @@
                 <h1><%= Settings::Client.name %></h1>
               </div>
             </div>
+            <div class="col-md-4">
+              <div class="text-right">
+                <%= link_to t(:help), '#' %> |
+                <%= link_to t(:usage), '#' %> |
+                <%= link_to t(:privacy), '#' %>
+              </div>
+            </div>
           </div>
         </div>
       </header>
