--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -71,7 +71,7 @@ header
   padding: 10px 0
   height: 100px
 
-  .systray
+  .container
     color: #1c94c4
 
 .footer
@@ -97,31 +97,21 @@ header
 .sidebar .tab-content
   padding: 10px
 
-.sidebar .sideways.tabs-right
-  position: fixed
-  left: 320px
-  width: 0px
-  top: 110px
+.view-switcher
+  margin-top: 10px
+  position: absolute
+  top: 100px
+  z-index: 100
+  right: 0
 
-.sideways > li
-  left: -28px
-  height: 20px
-  width: 120px
-  margin-bottom: 100px
-
-.sideways > li > a
-  height: 42px
-  background-color: #fff
-  opacity: 0.8
-
-.sideways > li.active > a
-  opacity: 1.0
+  a
+    width: 110px
 
 .map-panel
   min-width: 80px
   max-width: 350px
+  top: 50px
   position: absolute
-  top: 10px
   right: 0
   z-index: 1000
 
