--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -81,6 +81,9 @@
         </div>
       </div>
     </div>
+    <div class="sidebar-toggler">
+      <span></span>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="flash" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static">
