--- a/app/views/requests/desktop/_new_position_buttons.html.erb
+++ b/app/views/requests/desktop/_new_position_buttons.html.erb
@@ -1,5 +1,8 @@
 <div class="request-container">
   <div class="row form-group">
+    <%= label_tag :step, t('.step_one'), class: 'control-label col-md-12' %>
+  </div>
+  <div class="row form-group">
     <%= label_tag :where, t('.where'), class: 'col-md-12' %>
     <div class="col-md-12"><%= t('.place_icon') %></div>
   </div>
