--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -77,6 +77,7 @@ $ ->
     false
 
   $(document).on 'click', '.header-tab', () ->
+    $('.sidebar-toggler').trigger('click') unless $('.sidebar').is(':visible')
     unless $('.' + $(@).data('tab') + '-container').length > 0
       $.get($(@).data('url'), null, null, 'script')
   
