Hintergund-Farbe für die Karten-Schaltfläche

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -127,6 +127,10 @@ header
   a
     width: 110px
 
+.btn-map
+  color: #fff
+  background-color: #1c94c4
+
 .map-panel
   min-width: 80px
   max-width: 350px
