--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -20,9 +20,14 @@
 
   .ol-zoom
     left: 5px
+    top: 35px
   
   .ol-scale-line
     left: 5px
+
+  .geolocation
+    left: 5px
+    top: 5px
 
 .ol-touch .ol-control
   button
