--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -117,6 +117,23 @@ header
 .sidebar-toggler.open span:before
   content: '\e251'
 
+.address-search-field
+  position: absolute
+  background: rgba(0,60,136,0.5)
+  opacity: 0.9
+  padding: 1px
+  left: 5px
+  top: 5px
+  width: 200px
+  height: 34px
+  z-index: 1000
+
+  .panel-body
+    padding: 5px
+
+  input
+    max-height: 20px
+
 .view-switcher
   margin-top: 10px
   position: absolute
