--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -28,6 +28,17 @@
         </div>
       </div>
     </div>
+    <div class="panel panel-default address-search-field">
+      <div class="panel-body">
+        <div class="has-feedback has-select"
+             data-search-url="<%= places_path %>"
+             data-select-method="get"
+             data-select-url="<%=  map_path(format: :js) %>"
+             data-select-key="bbox[]">
+          <%= text_field(:places, :search, class: 'form-control', placeholder: t('.address_search')) %>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default map-panel">
       <div class="panel-heading" id="map-heading" role="tab">
         <%= link_to '#map-body', data: { toggle: 'collapse' }, class: 'collapsed',
